onek-invariant/src/snapshots/onek_invariant__tests__bump_deep.snap
---
source: onek-invariant/src/tests.rs
expression: info.to_snapshot(&state)
---
player_loc: (1, 1)
view:
####
#@W#
####

notes:
0) [Error] The water is too deep.

