onek-invariant/src/snapshots/onek_invariant__tests__bump_move.snap
---
source: onek-invariant/src/tests.rs
expression: view.to_snapshot(&state)
---
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????####????????
????????#.@#????????
????????####????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????

