onek-invariant/src/snapshots/onek_invariant__tests__bump_shallow.snap
---
source: onek-invariant/src/tests.rs
expression: info.to_snapshot(&state)
---
player_loc: (2, 1)
view:
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????####????????
????????#.@#????????
????????####????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????

notes:
0) [Environmental] You splash through the water.

