onek-invariant/src/snapshots/onek_invariant__tests__bump_wall.snap
---
source: onek-invariant/src/tests.rs
expression: info.to_snapshot(&state)
---
player_loc: (1, 1)
view:
####
#@ #
####

notes:
0) [Error] You bounce off the wall.

