onek-invariant/src/snapshots/onek_invariant__tests__from_str.snap
---
source: onek-invariant/src/tests.rs
expression: view.to_snapshot(&state)
---
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
?????????####???????
?????????#@##???????
?????????####???????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????

