onek-invariant/src/snapshots/onek_invariant__tests__los.snap
---
source: onek-invariant/src/tests.rs
expression: info.to_snapshot(&state)
---
player_loc: (4, 2)
view:
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
??????############??
??????#..........#??
??????#...@...#?????
??????#...#......#??
??????####?#######??
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????

notes:

